@@ -64,31 +64,8 @@ END_PERL
 }
 
 my %known_bad = map { ( "package $_" => 1 ) }
-  'and 0.50 ;', 'and 0.50 { 1 }', 'and 0.50;', 'and 0.50{ 1 }', 'and ;', 'and v1.2.3 ;', 'and v1.2.3 { 1 }', 'and v1.2.3;', 'and v1.2.3{ 1 }', 'and { 1 }', 'bless { 1 }',
-  'cmp 0.50 ;', 'cmp 0.50 { 1 }', 'cmp 0.50;', 'cmp 0.50{ 1 }', 'cmp ;', 'cmp v1.2.3 ;', 'cmp v1.2.3 { 1 }', 'cmp v1.2.3;', 'cmp v1.2.3{ 1 }', 'cmp { 1 }',
-  'eq 0.50 ;', 'eq 0.50 { 1 }', 'eq 0.50;', 'eq 0.50{ 1 }', 'eq ;', 'eq v1.2.3 ;', 'eq v1.2.3 { 1 }', 'eq v1.2.3;', 'eq v1.2.3{ 1 }', 'eq { 1 }',
-  'ge 0.50 ;', 'ge 0.50 { 1 }', 'ge 0.50;', 'ge 0.50{ 1 }', 'ge ;', 'ge v1.2.3 ;', 'ge v1.2.3 { 1 }', 'ge v1.2.3;', 'ge v1.2.3{ 1 }', 'ge { 1 }',
-  'gt 0.50 ;', 'gt 0.50 { 1 }', 'gt 0.50;', 'gt 0.50{ 1 }', 'gt ;', 'gt v1.2.3 ;', 'gt v1.2.3 { 1 }', 'gt v1.2.3;', 'gt v1.2.3{ 1 }', 'gt { 1 }',
-  'le 0.50 ;', 'le 0.50 { 1 }', 'le 0.50;', 'le 0.50{ 1 }', 'le ;', 'le v1.2.3 ;', 'le v1.2.3 { 1 }', 'le v1.2.3;', 'le v1.2.3{ 1 }', 'le { 1 }',
-  'lt 0.50 ;', 'lt 0.50 { 1 }', 'lt 0.50;', 'lt 0.50{ 1 }', 'lt ;', 'lt v1.2.3 ;', 'lt v1.2.3 { 1 }', 'lt v1.2.3;', 'lt v1.2.3{ 1 }', 'lt { 1 }',
-  'm 0.50 ;', 'm 0.50 { 1 }', 'm 0.50;', 'm 0.50{ 1 }', 'm ;', 'm v1.2.3 ;', 'm v1.2.3 { 1 }', 'm v1.2.3;', 'm v1.2.3{ 1 }', 'm { 1 }',
-  'ne 0.50 ;', 'ne 0.50 { 1 }', 'ne 0.50;', 'ne 0.50{ 1 }', 'ne ;', 'ne v1.2.3 ;', 'ne v1.2.3 { 1 }', 'ne v1.2.3;', 'ne v1.2.3{ 1 }', 'ne { 1 }',
-  'not 0.50 ;', 'not 0.50 { 1 }', 'not 0.50;', 'not 0.50{ 1 }', 'not ;', 'not v1.2.3 ;', 'not v1.2.3 { 1 }', 'not v1.2.3;', 'not v1.2.3{ 1 }', 'not { 1 }',
-  'or 0.50 ;', 'or 0.50 { 1 }', 'or 0.50;', 'or 0.50{ 1 }', 'or ;', 'or v1.2.3 ;', 'or v1.2.3 { 1 }', 'or v1.2.3;', 'or v1.2.3{ 1 }', 'or { 1 }',
-  'q 0.50 ;', 'q 0.50 { 1 }', 'q 0.50;', 'q 0.50{ 1 }', 'q ;', 'q v1.2.3 ;', 'q v1.2.3 { 1 }', 'q v1.2.3;', 'q v1.2.3{ 1 }', 'q { 1 }',
-  'qq 0.50 ;', 'qq 0.50 { 1 }', 'qq 0.50;', 'qq 0.50{ 1 }', 'qq ;', 'qq v1.2.3 ;', 'qq v1.2.3 { 1 }', 'qq v1.2.3;', 'qq v1.2.3{ 1 }', 'qq { 1 }',
-  'qr 0.50 ;', 'qr 0.50 { 1 }', 'qr 0.50;', 'qr 0.50{ 1 }', 'qr ;', 'qr v1.2.3 ;', 'qr v1.2.3 { 1 }', 'qr v1.2.3;', 'qr v1.2.3{ 1 }', 'qr { 1 }',
-  'qw 0.50 ;', 'qw 0.50 { 1 }', 'qw 0.50;', 'qw 0.50{ 1 }', 'qw ;', 'qw v1.2.3 ;', 'qw v1.2.3 { 1 }', 'qw v1.2.3;', 'qw v1.2.3{ 1 }', 'qw { 1 }',
-  'qx 0.50 ;', 'qx 0.50 { 1 }', 'qx 0.50;', 'qx 0.50{ 1 }', 'qx ;', 'qx v1.2.3 ;', 'qx v1.2.3 { 1 }', 'qx v1.2.3;', 'qx v1.2.3{ 1 }', 'qx { 1 }',
-  'return { 1 }',
-  's 0.50 ;', 's 0.50 { 1 }', 's 0.50;', 's 0.50{ 1 }', 's ;', 's v1.2.3 ;', 's v1.2.3 { 1 }', 's v1.2.3;', 's v1.2.3{ 1 }', 's { 1 }',
-  'scalar { 1 }',
-  'tr 0.50 ;', 'tr 0.50 { 1 }', 'tr 0.50;', 'tr 0.50{ 1 }', 'tr ;', 'tr v1.2.3 ;', 'tr v1.2.3 { 1 }', 'tr v1.2.3;', 'tr v1.2.3{ 1 }', 'tr { 1 }',
   'v10 0.50 ;', 'v10 0.50 { 1 }', 'v10 0.50;', 'v10 0.50{ 1 }', 'v10 ;', 'v10 v1.2.3 ;', 'v10 v1.2.3 { 1 }', 'v10 v1.2.3;', 'v10 v1.2.3{ 1 }', 'v10 { 1 }',
-  'x 0.50 ;', 'x 0.50 { 1 }', 'x 0.50;', 'x 0.50{ 1 }', 'x ;', 'x v1.2.3 ;', 'x v1.2.3 { 1 }', 'x v1.2.3;', 'x v1.2.3{ 1 }', 'x { 1 }',
   'x64 0.50 ;', 'x64 0.50 { 1 }', 'x64 0.50;', 'x64 0.50{ 1 }', 'x64 ;', 'x64 v1.2.3 ;', 'x64 v1.2.3 { 1 }', 'x64 v1.2.3;', 'x64 v1.2.3{ 1 }', 'x64 { 1 }',
-  'xor 0.50 ;', 'xor 0.50 { 1 }', 'xor 0.50;', 'xor 0.50{ 1 }', 'xor ;', 'xor v1.2.3 ;', 'xor v1.2.3 { 1 }', 'xor v1.2.3;', 'xor v1.2.3{ 1 }', 'xor { 1 }',
-  'y 0.50 ;', 'y 0.50 { 1 }', 'y 0.50;', 'y 0.50{ 1 }', 'y ;', 'y v1.2.3 ;', 'y v1.2.3 { 1 }', 'y v1.2.3;', 'y v1.2.3{ 1 }', 'y { 1 }'
   ;
 
 PERL_5_12_SYNTAX: {
